syntax = "proto3";

option java_package = "de.firehead.mapstruct.spi.protobuf.test.protos";
option java_outer_classname = "TestProtos";

message TestProtoMessage {
  string stringField = 1;
  int32 intField = 2;
  int64 longField = 3;
  float floatField = 4;
  double doubleField = 5;
  bool booleanField = 6;
  bytes bytesField = 7;
  TestEnum enumField = 8;
  map<string, string> stringMapField = 9;
  map<string, int32> intMapField = 10;
  map<string, int64> longMapField = 11;
  map<string, float> floatMapField = 12;
  map<string, double> doubleMapField = 13;
  map<string, bool> boolMapField = 14;
  map<string, bytes> bytesMapField = 15;
  map<string, TestEnum> enumMapField = 16;
}

message DeepTestProtoMessage {
  TestProtoMessage testProtoMessagePlain = 1;
  repeated TestProtoMessage testProtoMessageList = 2;
  map<string, TestProtoMessage> testProtoMessageMap = 3;
}

enum TestEnum {
  TEST_ENUM_UNSPECIFIED = 0;
  TEST_ENUM_VALUE = 1;
}
